# deep-astra

./: README.md  docker-compose.yml
backend/: .env.production  Dockerfile  pyproject.toml  requirements.txt  run.sh
backend/app/: initial_data.py  main.py
backend/app/api/api_v1/routers/: faces.py
backend/app/core/: .config.py.swp  config.py  deepface.py  security.py
backend/app/crud/: __init__.py  base.py
backend/app/db/: base.py  session.py
backend/app/models/: face.py
nginx/: nginx.conf
