[tool.poetry]
name = "deep-astra"
version = "0.1.0"
description = "Self hosted AI services."
authors = ["Srikanth Srungarapu <srikanth@crowdshakti.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "8.0.1"
colorama = "0.4.4"
pydantic = "1.8.2"
python-dotenv = "0.19.0"
six = "1.16.0"
typing-extensions = "3.10.0.0"
uvicorn = "0.14.0"
websockets = "9.1"
starlette = "0.16.0"
fastapi = "^0.70.0"
alembic = "1.4.3"
Authlib = "0.14.3"
celery = "5.0.0"
redis = "3.5.3"
httpx = "0.15.5"
ipython = "7.18.1"
itsdangerous = "1.1.0"
Jinja2 = "2.11.3"
pytest = "6.1.0"
requests = "2.24.0"
SQLAlchemy = "1.3.19"
passlib = "1.7.2"
bcrypt = "3.2.0"
sqlalchemy-utils = "0.36.8"
python-multipart = "0.0.5"
pyjwt = "1.7.1"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
